# TravelMind-AI

./: LICENSE  README.md
TravelMind AI/: README.md  pyproject.toml
TravelMind AI/src/TravelMind AI/: crew.py  main.py
TravelMind AI/src/TravelMind AI/config/: agents.yaml  tasks.yaml
TravelMind AI/src/TravelMind AI/tools/: __init__.py  custom_tool.py
