[project]
name = "TravelMind AI"
version = "0.1.0"
description = "TravelMind AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.75.3",
]

[project.scripts]
travel_planner_crewai = "TravelMind AI.main:run"
run_crew = "TravelMind AI.main:run"
train = "TravelMind AI.main:train"
replay = "TravelMind AI.main:replay"
test = "TravelMind AI.main:test"
run_with_trigger = "TravelMind AI.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
